--- a/Forum/Pages/Admin.razor
+++ b/Forum/Pages/Admin.razor
@@ -1,5 +1,4 @@
 ﻿@page "/admin/{Page?}"
-@using Microsoft.EntityFrameworkCore
 @attribute [Authorize(Policy = "IsAdmin")]
 @* ReSharper disable once InconsistentNaming *@
 @inject  Data.InfoMessage MessageService
@@ -52,8 +51,8 @@
                     <p>Threadcount: @selectedForum.Threads.Count</p>
                     <textarea class="form-control" @bind="_updateForumDescription" >@selectedForum.Description</textarea>
                     <div class="row">
-                        <button class="accent-red btn-bottom-left" @onclick="DeleteForum">Delete Forum</button>
-                        <button class="accent-blue btn-bottom-right" @onclick="UpdateForum">Update Forum</button>
+                        <button class="accent-red btn-bottom-left" @onclick="DeleteForumAsync">Delete Forum</button>
+                        <button class="accent-blue btn-bottom-right" @onclick="UpdateForumAsync">Update Forum</button>
                     </div>
                 </div>
 
@@ -62,7 +61,7 @@
                     <input type="text" placeholder="Name" @bind="_newForumName" class="form-control"/>
                     <textarea placeholder="Description" class="form-control" @bind="_newForumDescription"></textarea>
                     <div class="row">
-                        <button class="accent-blue btn-bottom-left btn-bottom-right" @onclick="AddForum">Add Forum</button>
+                        <button class="accent-blue btn-bottom-left btn-bottom-right" @onclick="AddForumAsync">Add Forum</button>
                     </div>
                 </div>
                 break;
@@ -70,7 +69,7 @@
                 <div class="main col form-sim ml-auto mr-auto text-center form-bigger">
                     <h4>Users: @_userCount</h4>
                     <input class="form-control" type="text" placeholder="Accountname" @bind="_searchUser" />
-                    <button class="accent-blue form-control" @onclick="SearchUser" >Search user</button>
+                    <button class="accent-blue form-control" @onclick="SearchUserAsync" >Search user</button>
                     @if (_selectedUser is not null)
                     {
                         <p>Accountname: @_selectedUser.AccountName</p>
@@ -89,7 +88,7 @@
                             <input style="display: inline-block; width: 0; flex-grow: 3; margin-right: 1rem; padding: 5px;" type="checkbox" @bind="@_updateSetBlocked" class="form-control"/>
                         </div>
                         <div class="row">
-                            <button class="accent-blue btn-bottom-left btn-bottom-right" @onclick="UpdateUser">Update User</button>
+                            <button class="accent-blue btn-bottom-left btn-bottom-right" @onclick="UpdateUserAsync">Update User</button>
                         </div>
                     }
                 </div>
@@ -116,6 +115,9 @@
     [Parameter]
     public string Page { get; set; }
 
+    /// <summary>
+    /// Initializes the page.
+    /// </summary>
     protected override async Task OnInitializedAsync()
     {
         await using var dbContext = DbContext.CreateDbContext();
@@ -128,33 +130,64 @@
         _userCount = dbContext.Users.Count();
     }
 
-    private async void UpdateForum()
+    /// <summary>
+    /// Applies user's changes to the selected forum.
+    /// </summary>
+    private async Task UpdateForumAsync()
     {
         await using var dbContext = DbContext.CreateDbContext();
 
         var forum = dbContext.Forums.First(f => f.Id == _selectedForumId);
         forum.Description = _updateForumDescription;
 
-        await dbContext.SaveChangesAsync();
+        try
+        {
+            await dbContext.SaveChangesAsync();
+        }
+        catch (DbUpdateException dbuEx)
+        {
+            await Console.Error.WriteLineAsync(dbuEx.ToString());
+        
+            MessageService.Message = "Could not update forum. Please reload the page and try again.";
+            return;
+        }
+        
         MessageService.Message = "Forum updated.";
     }
 
-    private async void DeleteForum()
+    /// <summary>
+    /// Deletes the selected forum.
+    /// </summary>
+    private async Task DeleteForumAsync()
     {
         await using var dbContext = DbContext.CreateDbContext();
 
         var forum = dbContext.Forums.First(f => f.Id == _selectedForumId);
         dbContext.Forums.Remove(forum);
 
-        await dbContext.SaveChangesAsync();
+        try
+        {
+            await dbContext.SaveChangesAsync();
+        }
+        catch (DbUpdateException dbuEx)
+        {
+            await Console.Error.WriteLineAsync(dbuEx.ToString());
+        
+            MessageService.Message = "Could not delete forum. Please reload the page and try again.";
+            return;
+        }
+        
         MessageService.Message = "Forum deleted.";
     }
     
-    private async void AddForum()
+    /// <summary>
+    /// Creates a new forum and stores it to the database.
+    /// </summary>
+    private async Task AddForumAsync()
     {
         await using var dbContext = DbContext.CreateDbContext();
         
-        var newForum = new Entity.Forum()
+        var newForum = new Entity.Forum
         {
             Name = _newForumName,
             Description = _newForumDescription
@@ -162,11 +195,25 @@
 
         dbContext.Forums.Add(newForum);
 
-        await dbContext.SaveChangesAsync();
+        try
+        {
+            await dbContext.SaveChangesAsync();
+        }
+        catch (DbUpdateException dbuEx)
+        {
+            await Console.Error.WriteLineAsync(dbuEx.ToString());
+
+            MessageService.Message = "Could not add forum. Please reload the page and try again.";
+            return;
+        }
+        
         MessageService.Message = "Forum created.";
     }
 
-    private async void SearchUser()
+    /// <summary>
+    /// Searches for a user.
+    /// </summary>
+    private async Task SearchUserAsync()
     {
         await using var dbContext = DbContext.CreateDbContext();
 
@@ -180,10 +227,14 @@
         _updateSetBlocked = _selectedUser.IsBlocked;
     }
 
-    private async void UpdateUser()
+    /// <summary>
+    /// Updates users settings.
+    /// </summary>
+    private async Task UpdateUserAsync()
     {
         await using var dbContext = DbContext.CreateDbContext();
 
+        // NOTE: We expect the keys to exist.
         var settingPoster = dbContext.Settings.First(s => s.SettingKey == "poster" && s.UserId == _selectedUser.Id);
         settingPoster.Value = _updateSetPoster.ToString();
 
@@ -192,8 +243,19 @@
 
         var userBlocked = dbContext.Users.First(u => u.Id == _selectedUser.Id);
         userBlocked.IsBlocked = _updateSetBlocked;
+
+        try
+        {
+            await dbContext.SaveChangesAsync();
+        }
+        catch (DbUpdateException dbuEx)
+        {
+            await Console.Error.WriteLineAsync(dbuEx.ToString());
+            
+            MessageService.Message = "Could not update user settings. Please reload the page and try again.";
+            return;
+        }
         
-        await dbContext.SaveChangesAsync();
-        MessageService.Message = "User settings update.";
+        MessageService.Message = "User settings updated.";
     }
 }
